# embedbot-rs

./: Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  embedbot.toml
src/: main.rs
src/embed_bot/: config.rs  mod.rs  settings.rs
src/embed_bot/embed/: create_response.rs  mod.rs  util.rs
src/scraper/: mod.rs  ninegag.rs  reddit.rs  twitter.rs  util.rs
