[package]
name = "embedbot-rs"
version = "0.6.1"
authors = ["Liss Heidrich"]
resolver = "2"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
thiserror = "2.0.18"
clap = { version = "4.5.60", features = ["derive", "string", "cargo"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
reqwest = { version = "0.13.2", default-features = false, features = ["rustls", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.0.3"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "signal"] }
url = "2.5.8"
serenity = { version = "0.12.5", default-features = false, features = ["rustls_backend", "model", "client", "gateway"] }
itertools = "0.14.0"
memx = "0.2.0"

scraper = { version = "0.25.0", optional = true }
json_nav = { git = "https://github.com/liss-h/json_nav", optional = true }
headless_chrome = { version = "1.0.10", optional = true }


[features]
default = ["reddit", "ninegag", "twitter", "implicit-auto-embed"]
reddit = ["dep:json_nav"]
ninegag = ["dep:scraper", "dep:json_nav"]
twitter = ["dep:scraper", "dep:headless_chrome"]
implicit-auto-embed = []
